deploy: manuelpagliuca/manuelpagliuca-hugo-source@c047c551a0a920aac265b17668c84dfdbae30262

--- a/index.html
+++ b/index.html
@@ -39,17 +39,19 @@ December 2020
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/manuelpagliuca/l-system target=_blank rel=noopener>Code</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=#ZgotmplZ target=_blank rel=noopener>Video</a></div></div></div><div class="col-12 isotope-item js-id-computer-vision js-id-ai js-id-misc"><div class="view-list view-list-item"><i class="fas fa-project-diagram pub-icon" aria-hidden=true></i>
 <a href=/project/pain-recognition/>Pain Recognition - Dataset analysis and experimental validation</a><div class=btn-links><a class="btn btn-outline-primary btn-page-header btn-sm" href=/uploads/Pain_Detection_Manuel_Pagliuca_AC_NI_2022.pdf target=_blank rel=noopener>PDF</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/manuelpagliuca/pain-recognition-ml target=_blank rel=noopener>Code</a></div></div></div><div class="col-12 isotope-item js-id-distributed-systems js-id-misc"><div class="view-list view-list-item"><i class="fas fa-project-diagram pub-icon" aria-hidden=true></i>
+<a href=/project/seta/>SETA - SElf-driving TA-xi service</a><div class=btn-links><a class="btn btn-outline-primary btn-page-header btn-sm" href=/uploads/Pain_Detection_Manuel_Pagliuca_AC_NI_2022.pdf target=_blank rel=noopener>PDF</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/manuelpagliuca/pain-recognition-ml target=_blank rel=noopener>Code</a></div></div></div><div class="col-12 isotope-item js-id-computer-graphics js-id-math"><div class="view-list view-list-item"><i class="fas fa-project-diagram pub-icon" aria-hidden=true></i>
 <a href=/project/geometry/>Subdivision of surfaces</a><div class=btn-links><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/manuelpagliuca/Computational_Geometry_2021 target=_blank rel=noopener>Code</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://youtu.be/tK8yzO6Btho target=_blank rel=noopener>Video</a></div></div></div></div></div></div></div></section><section id=section-tag_cloud class="home-section wg-tag-cloud"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Popular Topics</h1></div><div class="col-12 col-lg-8"><div class=tag-cloud><a href=/tag/academic/ style=font-size:.8rem>Academic</a>
 <a href=/tag/ai/ style=font-size:.8rem>AI</a>
-<a href=/tag/computer-graphics/ style=font-size:2.2643002974495365rem>Computer Graphics</a>
+<a href=/tag/computer-graphics/ style=font-size:2.115299544597441rem>Computer Graphics</a>
 <a href=/tag/computer-vision/ style=font-size:.8rem>Computer Vision</a>
-<a href=/tag/distributed-systems/ style=font-size:.8rem>Distributed Systems</a>
+<a href=/tag/distributed-systems/ style=font-size:1.4576497722987207rem>Distributed Systems</a>
 <a href=/tag/gp-gpu/ style=font-size:.8rem>GP-GPU</a>
-<a href=/tag/math/ style=font-size:1.5321501487247682rem>Math</a>
-<a href=/tag/misc/ style=font-size:2.2643002974495365rem>Misc</a>
-<a href=/tag/source-themes/ style=font-size:1.5321501487247682rem>Source Themes</a>
+<a href=/tag/math/ style=font-size:1.4576497722987207rem>Math</a>
+<a href=/tag/misc/ style=font-size:2.3270154828966763rem>Misc</a>
+<a href=/tag/source-themes/ style=font-size:1.4576497722987207rem>Source Themes</a>
 <a href=/tag/%E5%BC%80%E6%BA%90/ style=font-size:.8rem>开源</a></div></div></div></div></section><section id=contact class="home-section wg-contact"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Contact</h1></div><div class="col-12 col-lg-8"><p>For more information please feel free to contact me, I am often available 😊</p><ul class=fa-ul><li><i class="fa-li fas fa-envelope fa-2x" aria-hidden=true></i>
 <span id=person-email><a href=mailto:pagliuca.manuel@gmail.com>pagliuca.manuel@gmail.com</a></span></li><li><i class="fa-li fas fa-phone fa-2x" aria-hidden=true></i>
 <span id=person-telephone><a href=tel:+39%20345%20385%208631>+39 345 385 8631</a></span></li><li><i class="fa-li fas fa-clock fa-2x" aria-hidden=true></i>
