deploy: manuelpagliuca/manuelpagliuca-hugo-source@b39dbfc7a7aab869f3d6936ddee4186114bf7381

--- a/project/fix-it/index.html
+++ b/project/fix-it/index.html
@@ -6,17 +6,17 @@
 <a class="btn btn-outline-primary btn-page-header" href=/uploads/Slides.pdf target=_blank rel=noopener>Slides</a></div></div><div class=article-container><div class=article-style><p>Bachelor&rsquo;s Thesis, December 2019, B.Sc. in Computer Science @UniUPO</p><h2 id=about-the-thesis>About the thesis</h2><p><figure id=figure-how-the-flags-are-shown-on-the-map><div class="d-flex justify-content-center"><div class=w-100><img alt="How the flags are shown on the map." srcset="/project/fix-it/img_hu4a47e7bb555165f3249c1881edac94ca_100119_b37034bddf09116b1976a55737d309a8.webp 400w,
 /project/fix-it/img_hu4a47e7bb555165f3249c1881edac94ca_100119_f2bfcd2b8ef27eb87f80159d60305248.webp 760w,
 /project/fix-it/img_hu4a47e7bb555165f3249c1881edac94ca_100119_1200x1200_fit_q75_h2_lanczos_3.webp 1200w" src=/project/fix-it/img_hu4a47e7bb555165f3249c1881edac94ca_100119_b37034bddf09116b1976a55737d309a8.webp width=368 height=613 loading=lazy data-zoomable></div></div><figcaption data-pre=Figure&nbsp; data-post=:&nbsp; class=numbered>How the flags are shown on the map.</figcaption></figure>The complete title of the thesis is <em>&ldquo;Fix-it : Stream processing on event-driven system for
-managing public disservices&rdquo;</em>. The project itself consist in developing an <strong>E.D.A.</strong> (Event-Driven Application)
-system that will work on a mobile application called &ldquo;<strong>Fix-it</strong>&rdquo;, which is developed using Android
+managing public disservices&rdquo;</em>. The project itself consists of developing an <strong>E.D.A.</strong> (Event-Driven Application)
+system that will work with a mobile application called &ldquo;<strong>Fix-it</strong>&rdquo;, which is developed using Android
 Studio. The system is implemented with <strong>Google Firebase</strong> and <strong>Apache Kafka</strong> (stream processing).
-Different technologies involved in the implementation of this project like REST API, Stream Processing and
-Publisher-Subscribe pattern.</p><p>The project was developed only by just two guys, we used the concepts of the Agile Manifesto to design our workflow, everything was organized with a Kanban Board on Trello so that we could work consistently by breaking the work down into small parts.</p><p>The whole thesis is downloadable as PDF
+Different technologies were involved in the implementation of this project, such as REST API, Stream Processing and
+the Publisher-Subscribe pattern.</p><p>The project was developed by just two people. We used the concepts of the Agile Manifesto to design our workflow, and everything was organized with a Kanban Board on Trello so that we could work consistently by breaking the work down into small parts.</p><p>The whole thesis is available as a PDF
 <a href=/uploads/Manuel_Pagliuca_Tesi.pdf target=_blank>here</a>
-, was
-written using LaTeX on Overleaf, the Abstract is downloadable
+and was
+written using LaTeX on Overleaf. The Abstract is downloadable
 <a href=/uploads/Abstract.pdf target=_blank>here</a>
 .
-I attained a presentation of my thesis on Google Meet due to COVID-19, and I talked about my
+I gave a presentation of my thesis on Google Meet due to COVID-19, and I talked about my
 work using these
 <a href=/uploads/Slides.pdf target=_blank>slides</a>
 . The project was realized under the
