--- a/project/rt/index.html
+++ b/project/rt/index.html
@@ -2,12 +2,12 @@
 <span><i class="fas fa-bars"></i></span></button><div class="navbar-brand-mobile-wrapper d-inline-flex d-lg-none"><a class=navbar-brand href=/>Manuel Pagliuca</a></div><div class="navbar-collapse main-menu-item collapse justify-content-start" id=navbar-content><ul class="navbar-nav d-md-inline-flex"><li class=nav-item><a class=nav-link href=/#about><span>Home</span></a></li><li class=nav-item><a class=nav-link href=/#projects><span>Projects</span></a></li><li class=nav-item><a class=nav-link href=/#contact><span>Contact</span></a></li></ul></div><ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2"><li class="nav-item d-none d-lg-inline-flex"><a class=nav-link href=https://twitter.com/pagliucamanuel data-toggle=tooltip data-placement=bottom title="Follow me on Twitter" target=_blank rel=noopener aria-label="Follow me on Twitter"><i class="fab fa-twitter" aria-hidden=true></i></a></li><li class=nav-item><a class="nav-link js-search" href=# aria-label=Search><i class="fas fa-search" aria-hidden=true></i></a></li><li class="nav-item dropdown theme-dropdown"><a href=# class=nav-link data-toggle=dropdown aria-haspopup=true aria-label="Display preferences"><i class="fas fa-moon" aria-hidden=true></i></a><div class=dropdown-menu><a href=# class="dropdown-item js-set-theme-light"><span>Light</span></a>
 <a href=# class="dropdown-item js-set-theme-dark"><span>Dark</span></a>
 <a href=# class="dropdown-item js-set-theme-auto"><span>Automatic</span></a></div></li></ul></div></nav></header></div><div class=page-body><article class="article article-project"><div class="article-container pt-3"><h1>CUDA Ray Tracer</h1><div class=article-metadata><span class=article-date>Jun 27, 2021</span></div><div class="btn-links mb-3"><a class="btn btn-outline-primary btn-page-header" href=/uploads/GPU_COMPUTING___RAY_TRACER.pdf target=_blank rel=noopener>PDF</a>
-<a class="btn btn-outline-primary btn-page-header" href=https://github.com/manuelpagliuca/Ray-Tracer-CUDA target=_blank rel=noopener>Code</a></div></div><div class=article-container><div class=article-style><p>GPU Computing Course, July 2021, M.Sc. in Computer Science @UniMi</p><h2 id=about-the-project>About the project</h2><p>During the course of <strong>GPU Computing</strong> I decided to implement my old version of the Ray Tracer (based on the
+<a class="btn btn-outline-primary btn-page-header" href=https://github.com/manuelpagliuca/Ray-Tracer-CUDA target=_blank rel=noopener>Code</a></div></div><div class=article-container><div class=article-style><p>GPU Computing Course, July 2021, M.Sc. in Computer Science @UniMi</p><h2 id=about-the-project>About the project</h2><p>During the <strong>GPU Computing</strong> course, I decided to implement my old version of the Ray Tracer (based on
 <em>Ray Tracing in One
-Weekend</em> from
+Weekend</em> by
 <a href=https://raytracing.github.io/books/RayTracingInOneWeekend.html target=_blank>Peter Shirley</a>
 )
-on <strong>CUDA</strong>. In
+in <strong>CUDA</strong>. In
 <a href=/uploads/GPU_COMPUTING___RAY_TRACER.pdf target=_blank>this</a>
 paper I compared
 the two Ray Tracers underlining the
